# biorsp

./: README.md  benchmark_spatial_rsp.py  environment.yml  pyproject.toml
biorsp/: __init__.py
biorsp/io/: __init__.py
biorsp/rsp/: __init__.py  metrics.py
biorsp/utils/: __init__.py  downloaders.py  transform.py  utils.py
examples/: .gitignore  hcl_case_study.py  simulation.ipynb  visualization.ipynb
spatialrsp/: __init__.py
spatialrsp/io/: io.py
spatialrsp/preprocess/: preprocess.py
spatialrsp/spatial/: __init__.py  helpers.py  metrics.py  spatial.py
spatialrsp/utils/: downloaders.py  formatting.py  utils.py
spatialrsp/utils/data/: datasets.yml
